# perfumes-backend

./: README.md  pyproject.toml
backend/: permissions.py  settings.py  urls.py
brands/: admin.py  models.py  seeds.json  urls.py  views.py
brands/migrations/: 0001_initial.py  0002_brand_logo.py  0003_brand_creators_pic.py
perfumes/: admin.py  models.py  serializers.py  urls.py  views.py
perfumes/migrations/: 0001_initial.py  0002_remove_perfume_createdby_remove_perfume_creationdate.py  0003_remove_perfume_brand_perfume_brand_name.py  0004_perfume_createdby_perfume_created_at_and_more.py  0005_rename_createdby_perfume_creator.py  0006_alter_perfume_notes.py  0007_alter_perfume_creator.py  0008_alter_perfume_description.py  0009_rename_brand_name_perfume_brand.py  0010_alter_perfume_notes.py  0011_alter_perfume_notes.py  0012_alter_perfume_notes.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
